--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "My Portfolio",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server .",
+    "build": "Webpack .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +17,27 @@
   "bugs": {
     "url": "https://github.com/J5Wood/my-portfolio/issues"
   },
-  "homepage": "https://github.com/J5Wood/my-portfolio#readme"
+  "homepage": "https://github.com/J5Wood/my-portfolio#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.18.5",
+    "@babel/plugin-transform-runtime": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@babel/runtime": "^7.18.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.5",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jest": "^26.5.3",
+    "path": "^0.12.7",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
