--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "My Portfolio",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server .",
-    "build": "Webpack .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server .",
+    "start": "node server.js",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -42,6 +42,7 @@
     "webpack-dev-server": "^4.9.2"
   },
   "dependencies": {
+    "express": "^4.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
