--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "node": "16.x"
   },
   "scripts": {
-    "dev": "webpack-dev-server .",
-    "start": "node server.js",
-    "build": "webpack --mode production"
+    "start": "webpack serve --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -42,7 +41,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.2"
+    "webpack-dev-server": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "express": "^4.18.1",
