--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "webpack serve --open --config webpack.dev.js",
-    "start": "webpack --config webpack.prod.js",
+    "start": "node server.js",
     "build": "webpack --config webpack.prod.js"
   },
   "repository": {
